# password-manager-mvp1

./: .gitignore  IDEA_Contrasena_Maestra.md  IDEA_Gestor_Contrasenas.md  README.md  Reporte_SDD_Gestor_Contrasenas.md  pyproject.toml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-local-password-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-local-password-manager/checklists/: requirements.md
specs/001-local-password-manager/contracts/: vault-file-format.md  vault-service-interface.md
specs/002-change-master-password/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-change-master-password/checklists/: requirements.md
specs/002-change-master-password/contracts/: vault-service-interface.md
src/: main.py
src/crypto/: __init__.py  kdf.py  vault_cipher.py
src/generator/: password_generator.py
src/ui/: app.py  clipboard.py
src/ui/views/: change_password_dialog.py  create_vault_view.py  entry_form_view.py  generator_dialog.py  main_view.py  unlock_view.py
src/vault/: __init__.py  exceptions.py  models.py  repository.py  service.py
tests/: conftest.py
tests/integration/: test_tamper_detection.py  test_vault_roundtrip.py
tests/unit/: test_clipboard.py  test_kdf.py  test_models.py  test_password_generator.py  test_vault_cipher.py  test_vault_service.py
