[project]
name = "vault-manager"
version = "0.1.0"
description = "Gestor de contraseñas local y offline"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["crypto", "vault", "generator"]
omit = ["*/ui/*"]

[tool.coverage.report]
show_missing = true
